docker/fleetman-services/minikube/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-routing
spec:
  rules:
#    - host: domain.com
#    - host: subdomain.domain.com
#    - host: www.somehwere.com
# we can simulate that we have domain with mapping on /etc/hosts file
    - host: fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-webapp
              servicePort: 80
    - host: queue.fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleeman-queue
              servicePort: 8161
